feat: sh 추가 및 env 추가

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ email=xenx96@naver.com
 data_log_path=/data/ephemeral/home/log
 #해당
 data_path=./data
+git_project_name=level2-recsys-movierecommendation-recsys-06-lv3
