--- a/config/config-sample.yaml
+++ b/config/config-sample.yaml
@@ -3,6 +3,6 @@ model:
   mode: train #train or valid - (valid is train with valid)
   save_path : ./saved/model
 data:
-  type: basic
+  type: basic # basic / v2
   base_path: ./data/train
 
