--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,5 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+config/model_configs/*.yaml
 config.yaml
-./config/model_configs/*.yaml
