--- a/config/config-sample.yaml
+++ b/config/config-sample.yaml
@@ -1,5 +1,5 @@
 model:
-  type: FM
+  type: SASRecF
   mode: train #train or valid - (valid is train with valid)
   save_path : ./saved/model
 data:
